# yeji

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  dependabot.yml  publish.yml
.github/workflows/: publish.yml  test.yml
.hypothesis/examples/bd066e8e4017d791/: 1376a7c0f7183e2b
.hypothesis/examples/f927dd9246ff81c2/: 0137ed68178f4b83  028b03f5955885ba  (+100 more)
docs/: .readthedocs.yaml  conf.py  index.md  index.rst  requirements.txt
docs/package/: yeji.constants.md  yeji.datasets.md  yeji.features.md  yeji.func.md  yeji.lightning.datamodules.md  yeji.md  yeji.metrics.functional.md  yeji.metrics.md  yeji.nn.functional.md  yeji.transforms.functional.md  yeji.transforms.md
docs/package_reference/: yeji.constants.md  yeji.datasets.md  yeji.features.md  yeji.func.md  yeji.io.md  yeji.lightning.datamodules.md  yeji.lightning.md  yeji.md  yeji.metrics.functional.md  yeji.metrics.md  yeji.nn.functional.md  yeji.nn.md  yeji.optim.md  yeji.samplers.md  yeji.transforms.functional.md  yeji.transforms.md
docs/stylesheets/: extra.css
notebooks/: transforms.ipynb
src/yeji/: __init__.py  _apply_euler_angle_to_vector.py  _apply_rotation_matrix_to_vector.py  _apply_rotation_quaternion_to_vector.py  _apply_rotation_vector_to_vector.py  _apply_tait_bryan_angle_to_vector.py  _euler_angle_identity.py  _euler_angle_magnitude.py  _euler_angle_to_rotation_matrix.py  _euler_angle_to_rotation_quaternion.py  _euler_angle_to_rotation_vector.py  _euler_angle_to_tait_bryan_angle.py  _graft.py  _invert_euler_angle.py  _invert_rotation_matrix.py  _invert_rotation_quaternion.py  _invert_rotation_vector.py  _invert_tait_bryan_angle.py  _random_euler_angle.py  _random_rotation_matrix.py  _random_rotation_quaternion.py  _random_rotation_vector.py  _random_tait_bryan_angle.py  _rotation_matrix_identity.py  _rotation_matrix_magnitude.py  _rotation_matrix_to_euler_angle.py  _rotation_matrix_to_rotation_quaternion.py  _rotation_matrix_to_rotation_vector.py  _rotation_matrix_to_tait_bryan_angle.py  _rotation_quaternion_identity.py  _rotation_quaternion_magnitude.py  _rotation_quaternion_to_euler_angle.py  _rotation_quaternion_to_rotation_matrix.py  _rotation_quaternion_to_rotation_vector.py  _rotation_quaternion_to_tait_bryan_angle.py  _rotation_vector_identity.py  _rotation_vector_magnitude.py  _rotation_vector_to_euler_angle.py  _rotation_vector_to_rotation_matrix.py  _rotation_vector_to_rotation_quaternion.py  (+10 more)
tests/yeji/: test__slerp.py  test_increment.py
(+345 files in other folders)
