[build-system]
requires = ["setuptools-scm>=8.0.4", "setuptools>=69.0.3", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [{email = "allen.goodman@icloud.com", name = "Allen Goodman"}]
dynamic = ["version"]
license = {file = "LICENSE"}
name = "yeji"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pre-commit>=3.6.0", "pytest>=7.4.3"]

[tool.ruff]
line-length = 79

[tool.setuptools_scm]
