[build-system]
requires = [
    "setuptools-scm>=8.0.4",
    "setuptools>=69.0.3",
    "wheel>=0.42.0",
]
build-backend = "setuptools.build_meta"

[project]
authors = [{ email = "allen.goodman@icloud.com", name = "Allen Goodman" }]
dynamic = ["version"]
license = { file = "LICENSE" }
name = "yeji"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
all =[
    "yeji[datasets,documentation,metrics,test]",
]
datasets = [
    "torch",
]
documentation = [
    "sphinx-autoapi>=3.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx>=7.2.6",
]
metrics = [
    "matplotlib",
    "numpy",
    "torch",
    "torchmetrics",
]
test = [
    "pre-commit>=3.6.0",
    "pytest-cov>=4.1.0",
    "pytest>=7.4.3",
]

[tool.coverage.run]
omit = ["./src/yeji/constants/*"]

[tool.pytest.ini_options]
addopts = "--cov=yeji --cov-config=./pyproject.toml"

[tool.ruff]
ignore-init-module-imports = true
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools_scm]
